--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 <title>ProLevelDeveloper</title>
+<script>
+  h1 {
+  color: red;
+  }
+</script>
 </head>
 
 <body>
-Welcome to Full-Stack Learning Experience!
+  <h1>Welcome to Full-Stack Learning Experience!</h1>
 </body>
 
 </html>
