--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>ProLevelDeveloper</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/index.css">
+  <title>ProLevelDeveloper</title>
 </head>
-
 <body>
-  <h1>Welcome to Full-Stack Learning Experience!</h1>
+  
 </body>
-
 </html>
